--- a/src/style/components.css
+++ b/src/style/components.css
@@ -11,11 +11,67 @@
 }
 
 /* * TabsNav */
+.tabsNav-wrapper {
+	box-shadow: 0 0 20px 10px #80808099;
+	border-radius: 5px;
+}
 .visible-tabDescription {
-	background-color: darkred;
+	display: initial;
 }
 .hidden-tabDescription {
 	display: hidden;
+}
+.tabsNav-component {
+	width: 85%;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+}
+.tabsNav-link-container {
+	display: flex;
+}
+.tabsNav-link-container a {
+	text-decoration: none;
+	color: white;
+}
+.tabsNav-link-container .active-nav {
+	text-decoration: none;
+	color: #0d4f86;
+}
+
+/* * TabCard */
+.tabCard-container {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+	align-items: center;
+	width: 90%;
+	height: 400px;
+	margin-inline: auto;
+}
+.tabCard-img {
+	width: 40%;
+	object-fit: scale-down;
+	border-radius: 5px;
+}
+.tabCard-text-container {
+	width: 50%;
+	height: 85%;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+	align-items: flex-start;
+}
+.tabCard-title {
+	color: #0d4f86;
+	font-size: 2em;
+}
+.tabCard-description {
+	color: #d6d6d6;
+	flex-grow: 0.5;
 }
 
 /* * GridLogo */
