--- a/src/style/pages.css
+++ b/src/style/pages.css
@@ -1,3 +1,5 @@
+/* * GLOBAL TO ALL PAGES */
+
 /* * Home Page */
 .home-text {
 	width: 25%;
@@ -5,7 +7,6 @@
 	right: 100px;
 	top: 110px;
 	z-index: 1;
-	font-family: 'Roboto', sans-serif;
 	color: #0d4f86;
 	line-height: 2.5em;
 }
@@ -28,7 +29,6 @@
 	align-items: center;
 	font-weight: 100;
 	cursor: pointer;
-	font-family: 'Roboto', sans-serif;
 }
 
 a[class='home-enter-link'] {
@@ -58,7 +58,6 @@ a[class='home-enter-link'] {
 	right: 40px;
 	font-size: 1.3em;
 	color: #17568b;
-	font-family: 'Roboto', sans-serif;
 	cursor: pointer;
 }
 .p2-links2modules {
@@ -99,4 +98,13 @@ a[href='/module-5'] > div {
 	position: absolute;
 	right: 135px;
 	bottom: 86px;
+}
+
+/* * ALL Module PAGES */
+.modules > h1 {
+	color: #0d4f86;
+	font-weight: 400;
+	position: absolute;
+	top: 40px;
+	left: 90px;
 }
