--- a/src/style/components.css
+++ b/src/style/components.css
@@ -22,20 +22,32 @@
 	display: hidden;
 }
 .tabsNav-component {
-	width: 85%;
+	width: 80%;
 	position: absolute;
 	left: 50%;
 	top: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -45%);
 }
 .tabsNav-link-container {
 	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-items: center;
 }
 .tabsNav-link-container a {
 	text-decoration: none;
 	color: white;
+	width: 100%;
+	background-color: #0d4f86;
+	text-align: center;
+	height: 60px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 1.3em;
 }
-.tabsNav-link-container .active-nav {
+.tabsnav-link-container a {
 	text-decoration: none;
 	color: #0d4f86;
 }
@@ -75,7 +87,7 @@
 }
 
 /* * GridLogo */
-.gridlogo-container {
+.gridLogo-container {
 	position: absolute;
 	top: 50px;
 	right: 135px;
