--- a/src/style/components.css
+++ b/src/style/components.css
@@ -1,3 +1,7 @@
+/* * CSS FOR ALL THE COMPONENTS. */
+
+/* ! HomePageRoute styles are in "app.css" */
+
 /* * WomenImg */
 .women-img-container img {
 	width: 50%;
@@ -18,8 +22,8 @@
 .visible-tabDescription {
 	display: initial;
 }
-.hidden-tabDescription {
-	display: hidden;
+.hidden {
+	display: none;
 }
 .tabsNav-component {
 	width: 80%;
@@ -76,6 +80,7 @@
 	flex-wrap: nowrap;
 	justify-content: space-around;
 	align-items: flex-start;
+	margin-top: 35px;
 }
 .tabCard-title {
 	color: #0d4f86;
@@ -84,6 +89,106 @@
 .tabCard-description {
 	color: #d6d6d6;
 	flex-grow: 0.5;
+}
+
+/* * SearchPageRoute  */
+.searchPageRoute-container {
+	position: absolute;
+	top: 36px;
+	right: 125px;
+}
+.searchPageRoute-container > a {
+	text-decoration: none;
+	color: unset;
+}
+
+/* * SearchContext */
+.searchContext-ul {
+	width: 85%;
+	margin-inline: auto;
+	background-color: white;
+	padding-left: 0;
+	height: 495px;
+}
+.searchContext-ul > div {
+	height: 165px;
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: space-around;
+	align-items: center;
+}
+.searchBar-container {
+	height: 75px;
+	color: #abadae;
+	width: 80%;
+	margin-inline: auto;
+	padding-top: 15px;
+}
+.searchBar-container > div {
+	position: absolute;
+	z-index: 10;
+	top: 5px;
+}
+.searchBar-container > input {
+	border: none;
+	background: transparent;
+	height: 100%;
+	font-size: 2em;
+	color: white;
+}
+.searchBar-container > input:focus-visible {
+	outline: none;
+}
+#searchContext-left-btn {
+	position: absolute;
+	right: 300px;
+	bottom: 100px;
+}
+#searchContext-right-btn {
+	position: absolute;
+	right: 275px;
+	bottom: 100px;
+}
+.active-btn {
+	background-color: transparent;
+	border: none;
+	color: #0d4f86;
+}
+.passive-btn {
+	background-color: transparent;
+	border: none;
+	color: #abadae;
+}
+.active-btn:focus-visible,
+.passive-btn:focus-visible {
+	outline: none;
+}
+
+/* * SearchResults */
+/* .searchResult-img-wrapper {
+} */
+.searchResult-img-wrapper > img {
+	max-width: 160px;
+	max-height: 160px;
+	border-radius: 5px;
+	width: 100%;
+	object-fit: scale-down;
+}
+.searchResult-text-wrapper {
+	width: 60%;
+	height: 80%;
+	display: flex;
+	flex-flow: column nowrap;
+	justify-content: space-around;
+	align-items: start;
+}
+.searchResult-title {
+	color: #0d4f86;
+	font-size: 1.6em;
+}
+.searchResult-desc {
+	color: #d6d6d6;
+	line-height: 1.2em;
 }
 
 /* * GridLogo */
